--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>топ 10 пельменей</title>
-   git clone git@github.com:artemtop69/Slal.git
+    <title>топ 10 геев</title>
+
 </head>
 <body>
     <h1>все пельмени лучшие! </h1>
