--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 </head>
 <body>
-    <h1>все пельмени лучшие! </h1>
+    <h1>1 место : ты</h1>
     <p>а ты ожидал другой ответ? </p>
-    <button id="inputButton">Введите  комент автору</button>
+    <button id="inputButton">Введите что нибудь </button>
 
     <script>
         // Получаем кнопку по её ID
